[gd_scene load_steps=8 format=2]

[ext_resource path="res://map.jpg" type="Texture" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://clouds.shader" type="Shader" id=3]
[ext_resource path="res://MapViewport.gd" type="Script" id=4]
[ext_resource path="res://Main.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/smoke_on = false
shader_param/smoke_speed = 0.002
shader_param/smoke_color = 0.5
shader_param/smoke_transparency = 0.8
shader_param/smoke_direction = Vector2( 20, 50 )

[sub_resource type="RectangleShape2D" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 2 )
margin_left = 83.0
margin_top = 101.0
margin_right = 943.0
margin_bottom = 668.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapViewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 860, 567 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/MapViewport"]
current = true
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="ViewportContainer/MapViewport/Camera2D"]

[node name="Timer" type="Timer" parent="ViewportContainer/MapViewport/Camera2D"]

[node name="Sprite" type="Sprite" parent="ViewportContainer/MapViewport"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="ViewportContainer/MapViewport/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewportContainer/MapViewport/Sprite/Area2D"]
shape = SubResource( 1 )

[node name="ShakeBtn" type="Button" parent="."]
margin_left = 4.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 30.0
text = "Shake"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShakeSlider" type="HSlider" parent="."]
margin_left = 74.3418
margin_top = 8.8383
margin_right = 254.342
margin_bottom = 24.8383
max_value = 1000.0
value = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" type="CheckBox" parent="."]
margin_left = 260.0
margin_top = 6.0
margin_right = 331.0
margin_bottom = 31.0
text = "Clouds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shocks" type="CheckBox" parent="."]
margin_left = 260.0
margin_top = 30.0
margin_right = 364.0
margin_bottom = 55.0
text = "Shockwaves"
__meta__ = {
"_edit_use_anchors_": false
}
